modify a href outside btn

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <img src="img/sd-gundam.jpg" class="img-fluid">
           <p><span style="font-weight: bold;">Product 1</span> -Mobile Suit Gundam #1 RX-78-2 Gundam Bandai SDGCS Model Kit 
           </p>
-          <button class="btn btn-secondary"><a href="rx-78-2-sd.html">More Details</a></button>  
+          <a href="rx-78-2-sd.html"><button class="btn btn-secondary">More Details</button></a>  
         </div>
         
       </div>
