Add price in index page

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <div class="items">
           <img src="img/product/no_name.jpg" class="img-fluid">
           <p><span style="font-weight: bold;">HGBD 1/144 GUNDAM ASTRAY NO NAME</span> 
+            <br> <span class="price">RM 65.00</span>
           </p>
           <a href="hg30452.html" target="_blank"><button class="btn btn-secondary">More Details</button></a>  
         </div>
@@ -90,6 +91,7 @@
         <div class="items">
           <img src="img/product/rg_sazabi.jpg" class="img-fluid">
           <p><span style="font-weight: bold;">RG 1/144 MSN-04 SAZABI</span> 
+            <br> <span class="price">RM 165.00</span>
           </p>
           <a href="rg30363.html" target="_blank"><button class="btn btn-secondary">More Details</button></a>  
         </div>
@@ -98,7 +100,8 @@
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="items">
           <img src="img/product/rg_black_unicorn.jpg" class="img-fluid">
-          <p><span style="font-weight: bold;">RG UNICORN GUNDAM 02 BANSHEE NORN</span>  
+          <p><span style="font-weight: bold;">RG UNICORN GUNDAM 02 BANSHEE NORN</span>
+          <br> <span class="price">RM 198.00</span>  
           </p>
           <a href="rg21060.html" target="_blank"><button class="btn btn-secondary">More Details</button>
           </a>  
@@ -107,7 +110,7 @@
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="items">
           <img src="img/product/mg_quanta.jpg" class="img-fluid">
-          <p><span style="font-weight: bold;">MG 1/100 00 QAN[T] / QUANTA FULL SABER</span> 
+          <p><span style="font-weight: bold;">MG 1/100 00 QAN[T] / QUANTA FULL SABER</span> <br> <span class="price">RM 198.00</span>
           </p>
          <a href="mg55334.html" target="_blank"><button class="btn btn-secondary">More Details</button>
          </a>
@@ -116,7 +119,7 @@
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="items">
           <img src="img/product/sd_zeromaru.jpg" class="img-fluid">
-          <p><span style="font-weight: bold;">SDBD RX-ZEROMARU - AYAME'S MOBILE SUIT</span> 
+          <p><span style="font-weight: bold;">SDBD RX-ZEROMARU - AYAME'S MOBILE SUIT</span> <br> <span class="price">RM 68.00</span>
           </p>
           <a href="sdbd30361.html" target="_blank"><button class="btn btn-secondary">More Details</button></a>
         </div>
@@ -126,6 +129,7 @@
         <div class="items">
           <img src="img/product/pg-astray.jpg" class="img-fluid">
           <p><span style="font-weight: bold;">PG 1/60 GUNDAM ASTRAY RED FRAME</span>
+            <br> <span class="price">RM 680.00</span>
           </p>
           <a href="pg58463.html" target="_blank"><button class="btn btn-secondary">More Details</button>
           </a>
@@ -136,6 +140,7 @@
         <div class="items">
           <img src="img/product/pg_strike_freedom.jpg" class="img-fluid">
           <p><span style="font-weight: bold;">PG 1/60 STRIKE FREEDOM GUNDAM</span>
+            <br> <span class="price">RM 920.00</span>
           </p>
           <a href="pg65506.html" target="_blank"><button class="btn btn-secondary">More Details</button>
           </a>
@@ -145,6 +150,7 @@
         <div class="items">
           <img src="img/product/mg_justice.jpg" class="img-fluid">
           <p><span style="font-weight: bold;">MG 1/100 JUSTICE GUNDAM</span>
+            <br> <span class="price">RM 170.00</span>
           </p>
           <a href="mg16382.html" target="_blank"><button class="btn btn-secondary">More Details</button></a>  
         </div>
